fixed mobile menu scaling with top-bar and transform-origin alignment

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -198,7 +198,7 @@ body {
 
   .top-bar {
     transform: scale(0.65);
-    transform-origin: center;
+    transform-origin: top left;
     width: 150%;
   }
 
